# v8-matrix

./: .dockerignore  .gitignore  Cargo.toml  README.md  demo.sh  package.json  web-demo.sh
client/: package-lock.json  package.json  rspack.config.mjs
client/src/: App.jsx  main.jsx  styles.css
crates/examples/hello-wasm/: Cargo.toml  README.md
crates/examples/hello-wasm/src/: main.rs
crates/examples/wasip2-showcase/: Cargo.toml
crates/examples/wasip2-showcase/src/: main.rs
crates/examples/wasip2-udp-pingpong/: Cargo.toml
crates/examples/wasip2-udp-pingpong/src/: main.rs
crates/v8-matrix/: Cargo.toml  README.md
crates/v8-matrix-wasm-server/: Cargo.toml
crates/v8-matrix-wasm-server/src/: cert.rs  main.rs  webtransport.rs
crates/v8-matrix-wasm-server/static/: demo.html  index.html
crates/v8-matrix/src/: lib.rs
crates/v8-matrix/src/js_runtime/: bindings.rs  event_loop.rs  mod.rs
crates/v8-matrix/src/js_runtime/bootstrap/: 00_primordials.js  01_fetch.js  02_encoding.js  03_console.js
scripts/: demo.sh  dev
src/: main.rs
