[package]
name = "v8-matrix-wasm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
v8-matrix = { path = "../v8-matrix" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
