[package]
name = "v8-matrix-wasm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
v8-matrix = { path = "../v8-matrix" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
jsonwebtoken = "9"

# QUIC / WebTransport
quinn = { version = "0.11", features = ["runtime-tokio", "rustls", "ring"] }
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-webtransport = "0.1.2"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
sha2 = "0.10"
tracing = "0.1"
bytes = "1"
anyhow = "1"
http = "1"
rustls-acme = { version = "0.15", features = ["axum"] }
axum-server = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
