[package]
name = "v8-matrix"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
v8 = "130.0.2"
wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = "29"
bytes = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
url = "2"
